# Afine

./: README.md
.github/workflows/: python-publish.yml
Afine/: pyproject.toml
src/: Afine.py
