[project]
name="Afine"
version="0.0.1"
authors=[{name="Psyche Halo", email="Psyche@WinsGod.com"},]
description="Afine is a gradient based PyTorch optimizer. "
requires-python=">=3.8"
classifiers=["Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies=["torch >= 1.7.0",]
license="Mozilla Public License Version 2.0"
license-files = ["../LICEN[CS]E*"]
[project.urls]
Homepage="https://github.com/PsycheHalo/Afine"
Issues="https://github.com/PsycheHalo/Afine/issues"